{
    "name": "Ps4Controller",
    "maps": [
        {
            "name": "Player",
            "id": "0472afa9-9440-4089-9613-a31e5d5ce2d7",
            "actions": [
                {
                    "name": "MovePlayer",
                    "type": "Value",
                    "id": "9c05799a-bcdc-4137-9210-3036aa8aa6d0",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotatePlayer",
                    "type": "Value",
                    "id": "a096c89f-37fe-4ffe-95d5-1ac656e4692b",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LightsOn",
                    "type": "Button",
                    "id": "c1a3f177-b026-4151-ae92-5f624252c2d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LanternOn",
                    "type": "Button",
                    "id": "deffd06e-0808-4b35-a310-fdbfa228573f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shrink",
                    "type": "Button",
                    "id": "318b0281-f105-463f-a2dd-97714ca9ae60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Expand",
                    "type": "Button",
                    "id": "fb069b67-6486-4d91-ad9b-e1c7640dbc5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "88245057-a40d-489c-a64b-8b63ddec8d72",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd6a2665-4dde-4e5e-96f7-2b908ddb1ba1",
                    "path": "<DualShockGamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d632eb74-7bbe-4473-9080-0b07e32072e2",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightsOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "066aead5-5964-44ca-a100-288c150b027a",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanternOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d03a77e-c856-420b-be42-80c64750a0e3",
                    "path": "<DualShockGamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shrink",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbf058de-31c1-4895-b57d-cd49e05f1661",
                    "path": "<DualShockGamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Expand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LookTo",
            "id": "7c48754d-9f4a-4b55-931d-d225081452ad",
            "actions": [
                {
                    "name": "lookAt",
                    "type": "Value",
                    "id": "86f07bdb-dda8-4e95-aff6-250f083f8e35",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f2c178ab-c729-43bc-ad12-a92d0af9b7ed",
                    "path": "<DualShockGamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "lookAt",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}